package main.java;


public abstract class Marshaller {
}
